jenkins-demo/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: solar-system
  name: solar-system
spec:
  replicas: 1
  selector:
    matchLabels:
      app: solar-system
  strategy: {}
  template:
    metadata:
      labels:
        app: solar-system
    spec:
      containers:
      - image: vidaldocker/solar-system:110-c921676c4f0a055d97b426e28b2e0d7f5a5285ce
        name: solar-system
        ports: 
        - containerPort: 80
