jenkins-demo/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: solar-system
  name: solar-system-service
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
    nodePort: 31900
  selector:
    app: solar-system
  type: NodePort
